fix menu css on mobile (it was cutting off text on left and right of screen)

--- a/css/menu.css
+++ b/css/menu.css
@@ -77,6 +77,44 @@ h2 {
     width: 30em;
 }
 
+@media only screen
+and (device-width : 414px)
+and (device-height : 896px)
+{
+    h2 {
+        font-size:1.75em;
+        margin-bottom:0;
+        text-align: center;
+        color: black;
+    }
+
+    .appetizers, .entrees {
+        max-width: 35em;
+        overflow: hidden;
+    }
+
+    .menu-item {
+        box-shadow: 5px 5px 5px #888888;
+        line-height: 1.5em;
+        max-height: 15em;
+        margin: 1em;
+        padding: .5em;
+        max-width: 20em;
+        width: 20em;
+        background-color: red;
+    }
+
+    .menu-item2 {
+        border: 2.5px dashed red;
+        line-height: 1.5em;
+        max-height: 15em;
+        margin: 1em;
+        padding: .5em;
+        max-width: 20em;
+        width: 20em;
+    }
+}
+
 .menu-item-description {
     margin: 0;
 }
